ipc/ipdl/test/ipdl/error/race_ToError.ipdl
protocol race_ToError {
child:  M1();
parent: M2();

state S1:
    send M1 goto S2;
    recv M2 goto S3;

state S2:
    send M1 goto S2;

state S3:
    recv M2 goto S3;
};
